--- a/Papers/SMC2009/smc09.bib
+++ b/Papers/SMC2009/smc09.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Nils Peters at 2009-06-01 17:11:15 -0400 
+%% Created for Pascal Baltazar at 2009-06-03 00:34:57 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -278,9 +278,9 @@
 	Address = {Paris 92 E 019},
 	Author = {Jot, Jean-Marc},
 	Date-Added = {2009-04-01 09:04:38 -0400},
-	Date-Modified = {2009-04-01 09:04:38 -0400},
+	Date-Modified = {2009-06-03 00:34:56 +0200},
 	School = {France Telecom},
-	Title = {Etude et R{\'e}alization d'un Spatialisateur de Sons par Mod{\`e}les Physiques et Perceptifs},
+	Title = {Etude et R{\'e}alisation d'un Spatialisateur de Sons par Mod{\`e}les Physiques et Perceptifs},
 	Year = {1992}}
 
 @article{CMJ08-VIMIC,
